--- a/source code/portofolio.html
+++ b/source code/portofolio.html
@@ -48,15 +48,22 @@
             <div class="pf-box">
                 <h2 style="margin-bottom: 10px;">4. Aplikasi Tiket Donasi Konser Musik: El-Musica</h2>
                 <div class="pf-box-content">
-                    <img class="box-image" src="../assets/elmusica.png" alt="UpCycle">
+                    <img class="box-image" src="../assets/elmusica.png" alt="ElMusica">
                     <button style="margin-top: 10px;" class="pf-button" type="button"><a href="https://jelangfikriramadhan.medium.com/ui-ux-design-el-musica-83ea4c1371">Lihat Selengkapnya</a></button>
                 </div>
             </div>
             <div class="pf-box">
                 <h2 style="margin-bottom: 10px;">5. Pamflet Kegiatan Nguber Satasakya 2022</h2>
                 <div class="pf-box-content">
-                    <img class="box-image" src="../assets/nguber.png" alt="UpCycle">
+                    <img class="box-image" src="../assets/nguber.png" alt="Nguber Satasakya">
                     <button style="margin-top: 10px;" class="pf-button" type="button"><a href="https://drive.google.com/drive/folders/15VDI2fdBe3ab0hDCz5DPH66QL0IuJhnX?usp=share_link">Lihat Selengkapnya</a></button>
+                </div>
+            </div>
+            <div class="pf-box">
+                <h2 style="margin-bottom: 10px;">6. BMI Calculator</h2>
+                <div class="pf-box-content">
+                    <img class="box-image" src="../assets/BMI.png" alt="BMI Calculator">
+                    <button style="margin-top: 10px;" class="pf-button" type="button"><a href="https://jelang-bmi-calculator.netlify.app/">Lihat Selengkapnya</a></button>
                 </div>
             </div>
         </div>
