--- a/index.html
+++ b/index.html
@@ -10,18 +10,20 @@
     <nav>
         <a href="index.html" id="navNama">Jelang Fikri Ramadhan</a>
         <div id="navMenu">
+            <button id="navClose" onclick="toggleNav()">×</button>
             <a href="index.html" class="active">Home</a>
             <a href="./source code/aboutme.html">About Me</a>
             <a href="./source code/portofolio.html">Portofolio</a>
             <a href="./source code/linkedin.html">Linked In</a>
         </div>
+        <button id="navToggle" onclick="toggleNav()">☰</button>
     </nav>
 </head>
 
 <body id="bodyHome">
     <div id="home-1">
-        <div style="width: 800px; font-size: 36px; color: #0b5494;"><b>Jelang Fikri Ramadhan</b></div>
-        <div style="width: 800px; font-size: 18px; padding-top: 5px;">Hello! Welcome to my personal website!</div>
+        <div style="font-size: 36px; color: #0b5494;"><b>Jelang Fikri Ramadhan</b></div>
+        <div style="font-size: 18px; padding-top: 5px;">Hello! Welcome to my personal website!</div>
         <div style="padding-top: 30px; display: flex; flex-direction: row; align-items: center; gap: 15px;">
             <a href="https://www.linkedin.com/in/jelangfikriramadhan/">
                 <i class="fa-brands fa-linkedin fa-2xl"></i>
@@ -55,4 +57,9 @@
     </div>
 </body>
 
+<script>
+    function toggleNav() {
+      document.querySelector('nav').classList.toggle('nav-open');
+    }
+</script>
 </html>
