--- a/source code/aboutme.html
+++ b/source code/aboutme.html
@@ -9,13 +9,15 @@
     <script src="https://kit.fontawesome.com/7e0277cb02.js" crossorigin="anonymous"></script>
     <script src="https://code.iconify.design/iconify-icon/1.0.6/iconify-icon.min.js"></script>
     <nav>
-        <a href="../index.html" id="navNama">Jelang Fikri Ramadhan</a>
+        <a href="index.html" id="navNama">Jelang Fikri Ramadhan</a>
         <div id="navMenu">
+            <button id="navClose" onclick="toggleNav()">×</button>
             <a href="../index.html">Home</a>
-            <a href="aboutme.html" class="active">About Me</a>
-            <a href="portofolio.html">Portofolio</a>
-            <a href="linkedin.html">Linked In</a>
+            <a href="./aboutme.html" class="active">About Me</a>
+            <a href="./portofolio.html">Portofolio</a>
+            <a href="./linkedin.html">Linked In</a>
         </div>
+        <button id="navToggle" onclick="toggleNav()">☰</button>
     </nav>
 </head>
 
@@ -191,5 +193,9 @@
         </div>
     </div>
 </body>
-
+<script>
+    function toggleNav() {
+      document.querySelector('nav').classList.toggle('nav-open');
+    }
+</script>
 </html>
