--- a/source code/portofolio.html
+++ b/source code/portofolio.html
@@ -7,13 +7,15 @@
     <script src="https://kit.fontawesome.com/7e0277cb02.js" crossorigin="anonymous"></script>
     <script src="https://code.iconify.design/iconify-icon/1.0.6/iconify-icon.min.js"></script>
     <nav>
-        <a href="../index.html" id="navNama">Jelang Fikri Ramadhan</a>
+        <a href="index.html" id="navNama">Jelang Fikri Ramadhan</a>
         <div id="navMenu">
-            <a href="../index.html">Home</a>
-            <a href="aboutme.html">About Me</a>
-            <a href="portofolio.html" class="active">Portfolio</a>
-            <a href="linkedin.html">Linked In</a>
+            <button id="navClose" onclick="toggleNav()">×</button>
+            <a href="../index.html" >Home</a>
+            <a href="./aboutme.html">About Me</a>
+            <a href="./portofolio.html" class="active">Portofolio</a>
+            <a href="./linkedin.html" >Linked In</a>
         </div>
+        <button id="navToggle" onclick="toggleNav()">☰</button>
     </nav>
 </head>
 
@@ -69,3 +71,8 @@
         </div>
     </div>
 </body>
+<script>
+    function toggleNav() {
+      document.querySelector('nav').classList.toggle('nav-open');
+    }
+</script>
