--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body id="bodyHome">
     <div id="home-1">
-        <div style="font-size: 36px; color: #0b5494;"><b>Jelang Fikri Ramadhan</b></div>
+        <div><b>Jelang Fikri Ramadhan</b></div>
         <div style="font-size: 18px; padding-top: 5px;">Hello! Welcome to my personal website!</div>
         <div style="padding-top: 30px; display: flex; flex-direction: row; align-items: center; gap: 15px;">
             <a href="https://www.linkedin.com/in/jelangfikriramadhan/">
