--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body id="bodyHome">
     <div id="home-1">
         <div><b>Jelang Fikri Ramadhan</b></div>
-        <div style="font-size: 18px; padding-top: 5px;">Hello! Welcome to my personal website!</div>
+        <div id="hello" style="padding-top: 5px;">Hello! Welcome to my personal website!</div>
         <div style="padding-top: 30px; display: flex; flex-direction: row; align-items: center; gap: 15px;">
             <a href="https://www.linkedin.com/in/jelangfikriramadhan/">
                 <i class="fa-brands fa-linkedin fa-2xl"></i>
