about me responsive update v2

--- a/source code/aboutme.html
+++ b/source code/aboutme.html
@@ -61,10 +61,10 @@
                 <img src="../assets/unej.png" alt="Logo Unej">
             </div>
             <div>
-                <div class="sma1">University of Jember</div>
-                <div class="sma2">Information System - Faculty of Computer Science</div>
-                <div class="sma3">2020 - Present</div>
-                <div class="sma3">GPA : 3,59</div>
+                <div class="unej1">University of Jember</div>
+                <div class="unej2">Information System - Faculty of Computer Science</div>
+                <div class="unej3">2020 - Present</div>
+                <div class="unej3">GPA : 3,59</div>
                 <button class="buttonDetails" type="button"><a href="https://ilkom.unej.ac.id/">Details</a></button>
             </div>
         </div>
