portofolio updates + responsive

--- a/source code/portofolio.html
+++ b/source code/portofolio.html
@@ -7,7 +7,7 @@
     <script src="https://kit.fontawesome.com/7e0277cb02.js" crossorigin="anonymous"></script>
     <script src="https://code.iconify.design/iconify-icon/1.0.6/iconify-icon.min.js"></script>
     <nav>
-        <a href="index.html" id="navNama">Jelang Fikri Ramadhan</a>
+        <a href="../index.html" id="navNama">Jelang Fikri Ramadhan</a>
         <div id="navMenu">
             <button id="navClose" onclick="toggleNav()">×</button>
             <a href="../index.html" >Home</a>
@@ -21,52 +21,30 @@
 
 <body>
     <div id="pf-1">
-        <div style="color: #0b5394; font-size: 32px; font-weight: bold; margin-left: -10px;">
-            <i class="fa-sharp fa-solid fa-folder-open fa-sm" style="padding-right: 10px;"></i>My Portfolio
-        </div>
+        <!-- <div class="pflogo">
+            <i class="fa-sharp fa-solid fa-folder-open fa-sm"></i>My Portfolio
+        </div> -->
         
         <div id="pf-1-1">
             <div class="pf-box">
-                <h2 style="margin-bottom: 10px;">1. Aplikasi <em>E-Learning</em>: "SEEN"</h2>
-                <div class="pf-box-content">
-                    <img class="box-image" src="../assets/seen.webp" alt="SEEN">
-                    <button style="margin-top: 10px;" class="pf-button" type="button"><a href="https://jelangfikriramadhan.medium.com/ux-case-study-seen-f9f4c4e1064d">Lihat Selengkapnya</a></button>
-                </div>
+                <h2><a href="https://jelangfikriramadhan.medium.com/ux-case-study-seen-f9f4c4e1064d">1. SEEN (Mock Up Design)</a></h2>
+                <img src="../assets/seen.webp" alt="SEEN">
             </div>
             <div class="pf-box">
-                <h2 style="margin-bottom: 10px;">2. Aplikasi <em>E-Learning</em>: "Skillearn"</h2>
-                <div class="pf-box-content">
-                    <img class="box-image" src="../assets/skillearn.webp" alt="Skillearn">
-                    <button style="margin-top: 10px;" class="pf-button" type="button"><a href="https://jelangfikriramadhan.medium.com/ux-case-study-skillearn-741a5c969f8a">Lihat Selengkapnya</a></button>
-                </div>
+                <h2><a href="https://jelangfikriramadhan.medium.com/ux-case-study-skillearn-741a5c969f8a">2. Skillearn (Mock Up Design)</a></h2>
+                <img src="../assets/skillearn.webp" alt="Skillearn">
             </div>
             <div class="pf-box">
-                <h2 style="margin-bottom: 10px;">3. Website Go Green: UpCycle</h2>
-                <div class="pf-box-content">
-                    <img class="box-image" src="../assets/UpCycle.png" alt="UpCycle">
-                    <button style="margin-top: 10px;" class="pf-button" type="button"><a href="https://upcycle.netlify.app/">Lihat Selengkapnya</a></button>
-                </div>
+                <h2><a href="https://upcycle.netlify.app/">3. UpCycle (Website)</a></h2>
+                <img src="../assets/UpCycle.png" alt="UpCycle">
             </div>
             <div class="pf-box">
-                <h2 style="margin-bottom: 10px;">4. Aplikasi Tiket Donasi Konser Musik: El-Musica</h2>
-                <div class="pf-box-content">
-                    <img class="box-image" src="../assets/elmusica.png" alt="ElMusica">
-                    <button style="margin-top: 10px;" class="pf-button" type="button"><a href="https://jelangfikriramadhan.medium.com/ui-ux-design-el-musica-83ea4c1371">Lihat Selengkapnya</a></button>
-                </div>
+                <h2 style="margin-bottom: 10px;"><a href="https://jelangfikriramadhan.medium.com/ui-ux-design-el-musica-83ea4c1371">4. El-Musica (Mock Up Design)</a></h2>
+                <img src="../assets/elmusica.png" alt="ElMusica">
             </div>
             <div class="pf-box">
-                <h2 style="margin-bottom: 10px;">5. Pamflet Kegiatan Nguber Satasakya 2022</h2>
-                <div class="pf-box-content">
-                    <img class="box-image" src="../assets/nguber.png" alt="Nguber Satasakya">
-                    <button style="margin-top: 10px;" class="pf-button" type="button"><a href="https://drive.google.com/drive/folders/15VDI2fdBe3ab0hDCz5DPH66QL0IuJhnX?usp=share_link">Lihat Selengkapnya</a></button>
-                </div>
-            </div>
-            <div class="pf-box">
-                <h2 style="margin-bottom: 10px;">6. BMI Calculator</h2>
-                <div class="pf-box-content">
-                    <img class="box-image" src="../assets/BMI.png" alt="BMI Calculator">
-                    <button style="margin-top: 10px;" class="pf-button" type="button"><a href="https://jelang-bmi-calculator.netlify.app/">Lihat Selengkapnya</a></button>
-                </div>
+                <h2><a href="https://jelang-bmi-calculator.netlify.app/">5. BMI Calculator</a></h2>
+                <img src="../assets/BMI.png" alt="BMI Calculator">
             </div>
         </div>
     </div>
