--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="index.html" class="active">Home</a>
             <a href="./source code/aboutme.html">About Me</a>
             <a href="./source code/portofolio.html">Portofolio</a>
-            <a href="./source code/linkedin.html">Linked In</a>
+            <a href="https://www.linkedin.com/in/jelangfikriramadhan/">Linked In</a>
         </div>
         <button id="navToggle" onclick="toggleNav()">☰</button>
     </nav>
