--- a/source code/aboutme.html
+++ b/source code/aboutme.html
@@ -15,7 +15,7 @@
             <a href="../index.html">Home</a>
             <a href="./aboutme.html" class="active">About Me</a>
             <a href="./portofolio.html">Portofolio</a>
-            <a href="./linkedin.html">Linked In</a>
+            <a href="https://www.linkedin.com/in/jelangfikriramadhan/">Linked In</a>
         </div>
         <button id="navToggle" onclick="toggleNav()">☰</button>
     </nav>
