--- a/source code/portofolio.html
+++ b/source code/portofolio.html
@@ -13,7 +13,7 @@
             <a href="../index.html" >Home</a>
             <a href="./aboutme.html">About Me</a>
             <a href="./portofolio.html" class="active">Portofolio</a>
-            <a href="./linkedin.html" >Linked In</a>
+            <a href="https://www.linkedin.com/in/jelangfikriramadhan/" >Linked In</a>
         </div>
         <button id="navToggle" onclick="toggleNav()">☰</button>
     </nav>
