--- a/source code/portofolio.html
+++ b/source code/portofolio.html
@@ -46,6 +46,10 @@
                 <h2><a href="https://jelang-bmi-calculator.netlify.app/">5. BMI Calculator</a></h2>
                 <img src="../assets/BMI.png" alt="BMI Calculator">
             </div>
+            <div class="pf-box">
+                <h2><a href="https://github.com/jelangfr13/Si-Pets">6. Si-Pets (Animal Adoption Web)</a></h2>
+                <img src="../assets/Screenshot (144).png" alt="Si-Pets">
+            </div>
         </div>
     </div>
 </body>
