--- a/source code/aboutme.html
+++ b/source code/aboutme.html
@@ -51,7 +51,7 @@
                 <div class="sma1">SMAN 94 JAKARTA</div>
                 <div class="sma2">Sains</div>
                 <div class="sma3">2017 - 2020</div>
-                <div class="sma3">GPA : 89,86</div>
+                <div class="sma3">GPA : 89,86 / 100</div>
                 <button class="buttonDetails" type="button"><a href="https://sman94.sch.id/">Details</a></button>
             </div>
         </div>
@@ -64,7 +64,7 @@
                 <div class="unej1">University of Jember</div>
                 <div class="unej2">Information System - Faculty of Computer Science</div>
                 <div class="unej3">2020 - Present</div>
-                <div class="unej3">GPA : 3,59</div>
+                <div class="unej3">GPA : 3,59 / 4</div>
                 <button class="buttonDetails" type="button"><a href="https://ilkom.unej.ac.id/">Details</a></button>
             </div>
         </div>
