update bg mobile

--- a/source code/aboutme.html
+++ b/source code/aboutme.html
@@ -22,6 +22,11 @@
 </head>
 
 <body>
+    <div>
+        <img class="ame-bg" src="../assets/bg-2.png" alt="background">
+        <img class="ame-bg-mobile" src="../assets/bg-3.png" alt="background">
+    </div>
+
     <div id="ame-1">
         <div class="ame1logo">
             <i class="fa-solid fa-user fa-sm"></i>About Me
