--- a/source code/portofolio.html
+++ b/source code/portofolio.html
@@ -21,6 +21,11 @@
 
 <body>
     <div id="pf-1">
+        <div>
+            <img class="pf-bg" src="../assets/bg-2.png" alt="background">
+            <img class="pf-bg-mobile" src="../assets/bg-3.png" alt="background">
+        </div>
+
         <!-- <div class="pflogo">
             <i class="fa-sharp fa-solid fa-folder-open fa-sm"></i>My Portfolio
         </div> -->
